docs(agents): AGENTS.md becomes the contract, and this line states its own terms (#450)
* docs(agents): AGENTS.md becomes the contract, and this line states its own terms

Ports the ADR-085 §I adoption from `main` (#448) onto the preview line. The
structure is identical; the claims are not, because half of what the default
line's guardrails assert is false here.

Motivation:
The guardrails were authored in four places and had drifted apart — `CLAUDE.md`
at 20 KB was the real source, `.github/copilot-instructions.md` held an older
copy, `.github/skills/` shipped the six micro-skills `exeris-triage` retired,
and `.github/prompts/` carried the twelve Community prompts a third time,
inlined. The schema's L1 gate reports four errors against the tree as it was.

Modification:
- `AGENTS.md` is the canonical entry point and `.agents/` the canonical
  semantic source: 8 policies, 2 references, and the 16 skills, 6 profiles and
  12 workflows moved out of `.claude/`.
- `.claude/` and `.github/{agents,prompts,skills,instructions}` are generated
  adapters, 69 files, one body per rule.
- `CONTRIBUTING.md` gains "Licence, contributor terms and provenance".

Written for this line, not inherited:
- `jdk-and-preview-track.md` is rewritten from the other side. JDK 28 EA,
  `--enable-preview` on main sources as well as tests, coordinates
  `eu.exeris.preview`. All four `StructuredTaskScope` sites stay, and removing
  one is a change to this line's premise rather than a cleanup — `main`'s
  `StructuredScope` is its downgrade artefact and would be dead code here.
  JEP 401 makes the Valhalla carrier discipline executable here and a style
  rule there. The preview bytecode stamp is the expected state, not a gate
  failure.
- `AGENTS.md` says which line you are on and points at `PREVIEW-TRACK.md`.
- The architecture guard's standalone invocation fails here with
  `[No Class Loaded]` for a classpath reason. That was recorded in
  `PREVIEW-TRACK.md` and nowhere an agent would look before r